changed spacing in attempt to fix bug on windows pc

--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,8 @@ h4 {
   flex-direction: column;
   margin-left: 2%;
   justify-content: flex-start;
+  position: relative;
+  bottom: .05em;
 }
 
 .software-develop {
